Bugfix for weird animation issue on mobile

--- a/client/src/components/Theory/Question/index.css
+++ b/client/src/components/Theory/Question/index.css
@@ -2,6 +2,7 @@
   width: 100%;
   margin-top: 1em;
   opacity: 0;
+  animation: slide-up 1s;
   animation-delay: 2s;
   animation-fill-mode: forwards;
 }
